@@ -40,10 +40,11 @@ function hook_menu_position_rule_alter(&$rule, &$context, &$rule_matches, &$set_
  *   "MODULE_menu_position_rule_PLUGIN_form".
  * - condition_callback: (optional) The name of the function to use when the
  *   rule is being tested. Defaults to "MODULE_menu_position_condition_PLUGIN".
- * - file: (optional) Include file containing form and condition callback
- *   function definitions. The hook_menu_position_rule_plugins() implementation
- *   must be in a .module file, but the include file will only be loaded if a
- *   rule is configured to use the plugin's condition.
+ * - file: (optional) The path, relative to the .module file, to an include file
+ *   containing the form and condition callback function definitions. The
+ *   hook_menu_position_rule_plugins() implementation must be in a .module file,
+ *   but the include file will only be loaded if a rule is configured to use the
+ *   plugin's condition.
  *
  * @return
  *   An associative array containing the information about each plugin.
