@@ -1,3 +1,12 @@
+Menu Position 7.x-1.1, 2012-02-22
+---------------------------------
+- #1439948 by reglogge: form validation fails when adding many taxonomy terms to a rule
+- #1157564 by konordo, jwilson3 and JohnAlbin: Add user role based plugin
+- #1363392 by Les Lim: Fix PHP Notice on 404 pages
+- Add dependency on Drupal 7.12 or later
+- #1426482 by craigjones: Menu position module fails to provide correct active trail under Drupal 7.12
+- #1336338 by miro_dietiker and rvilar: Adding a new menu item fails
+
 Menu Position 7.x-1.0, 2011-11-01
 ---------------------------------
 - by davereid and JohnAlbin: rowCount doesn't work when using sqlite
